some alignment issue fixed

--- a/css/global.css
+++ b/css/global.css
@@ -641,9 +641,11 @@ html {
 .Send-to-contact ul li:first-child {
     height: 70px;
 }
+
 .Send-to-contact ul li:last-child {
     height: 60px;
 }
+
 .Send-to-contact ul li {
     display: flex;
 }
@@ -2222,50 +2224,57 @@ button:focus {
 
 
 /*--------------For multiEmail--------------*/
+
 .marqueeFax {
     position: relative;
     float: right;
     overflow: hidden;
 }
+
 #multiFax {
     display: inline-flex;
-    position: relative;  
-    float:left;
+    position: relative;
+    float: left;
     animation: marqueeRevFax 5s infinite;
     animation-play-state: paused;
     /* overflow-x: auto; */
 }
-#multiFax > span {
+
+#multiFax>span {
     display: inline-block;
-    float:left;
+    float: left;
 }
-.marqueeFax:hover  #multiFax{
+
+.marqueeFax:hover #multiFax {
     animation: marqueemoveFax 5s infinite;
     animation-play-state: running;
-  }
+}
 
-  .marqueeSend {
+.marqueeSend {
     position: relative;
     float: right;
     overflow: hidden;
 }
+
 #multiSend {
     display: inline-flex;
-    position: relative;  
-    float:left;
+    position: relative;
+    float: left;
     animation: marqueeRevSend 5s infinite;
     animation-play-state: paused;
     /* overflow-x: auto; */
 }
-#multiSend > span {
+
+#multiSend>span {
     display: inline-block;
-    float:left;
+    float: left;
 }
-.marqueeSend:hover  #multiSend{
+
+.marqueeSend:hover #multiSend {
     animation: marqueemoveSend 5s infinite;
     animation-play-state: running;
-  }
-  
+}
+
 div.ei,
 input.ei {
     min-height: 22px;
@@ -2516,4 +2525,15 @@ input[type=range]+.thumb.active .value {
 
 .js-marquee {
     display: flex;
+}
+
+.Side-shade {
+    position: absolute;
+    background: #000;
+    /* border: 1px solid #fff; */
+    height: 250px;
+    width: 123px;
+    margin-top: 0px;
+    margin-left: -106px;
+    z-index: 999;
 }
